<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/lay_tabs_menu"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/lotion_filter_menu"
            android:layout_centerVertical="true"
            android:background="@drawable/filter_menu"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay_tabs_brand"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/lotion_filter_brand"
            android:layout_centerVertical="true"
            android:background="@drawable/filter_brand"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />
        <TextView
            android:id="@+id/tv_lotion_filter_brand"
            android:layout_toRightOf="@+id/lotion_filter_brand"
            android:layout_centerVertical="true"
            android:text="@string/lotion_filter_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lay_tabs_sort"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/lotion_filter_sort"
            android:layout_centerVertical="true"
            android:background="@drawable/filter_sort"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />
        <TextView
            android:id="@+id/tv_lotion_filter_sort"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/lotion_filter_sort"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/lotion_filter_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lay_tabs_price"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/lotion_filter_price"
            android:layout_centerVertical="true"
            android:background="@drawable/filter_price"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />
        <TextView
            android:id="@+id/tv_lotion_filter_price"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/lotion_filter_price"
            android:text="@string/lotion_filter_price"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    </LinearLayout>
</RelativeLayout>