<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.home.HomeActivity">

    <RelativeLayout
        android:id="@+id/card_adap_offers"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/sub_cate_iv"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp" />
            <ImageView
                android:id="@+id/iv_sub_cate_fav"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/fav_unselect"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/sub_cate_tv_title"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toLeftOf="@+id/iv_sub_cate_fav"
                android:layout_toRightOf="@+id/sub_cate_iv"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/babycare_desc_1"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/sub_cate_tv_unit"
                android:layout_below="@+id/sub_cate_tv_title"
                android:layout_toRightOf="@+id/sub_cate_iv"
                android:text="Unit: 500 ml"
                android:fontFamily="@font/montserrat_light"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sub_cate_tv_price"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/sub_cate_tv_unit"
                android:layout_toRightOf="@+id/sub_cate_iv"
                android:textColor="@color/blue"
                android:text="@string/babycare_price_1"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sub_cate_tv_price_dt"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_below="@+id/sub_cate_tv_unit"
                android:layout_toRightOf="@+id/sub_cate_tv_price"
                android:text="@string/babycare_price_dt1"
                android:textColor="@color/tv_price_dt"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:visibility="gone"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_below="@+id/sub_cate_tv_unit"
                android:layout_toRightOf="@+id/sub_cate_tv_price"
                android:background="@color/view_price_dt"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="1dp">

            </View>

            <View
                android:layout_below="@+id/sub_cate_iv"
                android:background="@color/sub_filter_list_bg"
                android:layout_width="match_parent"
                android:layout_height="1dp">

            </View>

        </RelativeLayout>
    </RelativeLayout>






</RelativeLayout>